# Frost-Particle-Meshing-for-Blender

./: .gitattributes  .gitignore  EXTENDING_MESHERS.md  POTENTIAL_MESHERS.md  README.md  build.bat  build_debug.bat  build_log.bat  build_nopause.bat  check_deps.bat  install.bat  test_tbb_threads.py
blender_frost_adapter/: CMakeLists.txt
blender_frost_adapter/inc_compat/libb2/: blake2.h
blender_frost_adapter/inc_compat/tbb/: atomic.h  pipeline_shim.h  task_scheduler_init.h  tbb_exception.h  tbb_stddef.h  tbb_thread.h
blender_frost_adapter/inc_compat/utf8cpp/: utf8.h
blender_frost_adapter/src/: adapter.cpp  compat_headers.hpp  frost_interface.cpp  frost_interface.hpp  vulkan_backend.cpp  vulkan_compute_shader.cpp  vulkan_compute_shader.hpp
blender_frost_adapter/src/cuda/: CMakeLists.txt  frost_cuda.cu  tables.h
documentations/: BLENDER_EXTENSIONS_COMPLIANCE.md  CHANGELOG.md  README.md  TECHNICAL_REFERENCE.md  USER_GUIDE.md
frost_blender_addon/: INSTALL.txt  LICENSE.txt  README.md  THIRD_PARTY_NOTICES.md  __init__.py  blender_manifest.toml  operator.py  particle_extractor.py  test_load.py  ui.py
frost_blender_addon/core/: __init__.py  algorithms.py  implicit_surface.py  voxel_grid.py
thinkbox-frost/: stdafx.cpp  stdafx.h
thinkbox-frost/UnitTests/: geometry_meshing_parameters.hpp  stdafx.cpp  stdafx.h  test_frost.cpp  test_geometry_meshing.cpp
thinkbox-frost/frost/: channel_names.hpp  create_id_channel_from_index_particle_istream.hpp  create_meshing_policy.hpp  frost.hpp  frost_parameter_interface.hpp  frost_parameters.hpp  geometry_meshing.hpp  geometry_meshing_parameters_interface.hpp  geometry_source_interface.hpp  material_mode.hpp  meshing_policy.hpp  positive_radius_culled_particle_istream.hpp  sampler.hpp  utility.hpp
thinkbox-frost/src/: create_meshing_policy.cpp  frost.cpp  frost_parameters.cpp  geometry_meshing.cpp  meshing_policy.cpp  utility.cpp
